Add navbar to layout

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel='stylesheet' href='https://bootswatch.com/4/spacelab/bootstrap.min.css'>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#">
+      <img src="/images/ssas-removebg-preview.png">
+    </a>
+    <div class="container">
+      <div class="nav-box">
+        <div class="row row-up">
+          <div id="navbarColor03">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">English</a>
+              </li>
+              <li class="nav-item mt-2">
+                |
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">繁中</a>
+              </li>
+              <li class="nav-item mt-2">
+                |
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">回首頁</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="collapse navbar-collapse" id="navbarColor02">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">公司簡介</a>
+              </li>
+              <li class="nav-item mt-2">
+                |
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">服務項目</a>
+              </li>
+              <li class="nav-item mt-2">|</li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">市場分析</a>
+              </li>
+              <li class="nav-item mt-2">|</li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">服務團隊</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </nav>
+  {{{body}}}
+</body>
+
 </html>
