--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,73 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="slider-img container">
+  <div class="carousel slide" data-ride="carousel" id="carousel-demo">
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-demo" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-demo" data-slide-to="1"></li>
+      <li data-target="#carousel-demo" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="http://www.arkshipping.com.tw/banner/01.jpg" alt="">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="http://www.arkshipping.com.tw/banner/02.jpg" alt="">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="http://www.arkshipping.com.tw/banner/03.jpg" alt="">
+      </div>
+
+      <a href="#carousel-demo" class="carousel-control-prev" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a href="#carousel-demo" class="carousel-control-next" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+  </div>
+</div>
+
+<div class="info container mt-5">
+  <div class="row">
+    <div class="col-3 info-data">
+      <img class="d-block w-100 info-img" src="http://www.arkshipping.com.tw/image/inforBanner01.jpg" alt="">
+      <h5 class="info-title">公司簡介</h5>
+      <hr />
+      <p class="info-content">公司歷史沿革<br />
+        公司經營概況</p>
+      <a href="#" class="btn btn-warning info-btn" style="color: white;">more</a>
+    </div>
+    <div class="col-3 info-data">
+      <img class="d-block w-100 info-img" src="http://www.arkshipping.com.tw/image/inforBanner02.jpg" alt="">
+      <h5 class="info-title">服務項目</h5>
+      <hr />
+      <p class="info-content">
+        買賣<br />
+        租賃<br />
+        新造船<br />
+        船舶融資<br />
+        船舶管理</p>
+      <a href="#" class="btn btn-warning info-btn" style="color: white;">more</a>
+
+    </div>
+    <div class="col-3 info-data">
+      <img class="d-block w-100 info-img" src="http://www.arkshipping.com.tw/image/inforBanner04.jpg" alt="">
+      <h5 class="info-title">市場分析</h5>
+      <hr />
+      <p class="info-content">
+        貨櫃船租金成交報導<br />
+        二手船成交報導<br />
+        造船市場報導</p>
+      <a href="#" class="btn btn-warning info-btn" style="color: white;">more</a>
+
+    </div>
+    <div class="col-3 info-data">
+      <img class="d-block w-100 info-img" src="http://www.arkshipping.com.tw/image/inforBanner03.jpg" alt="">
+      <h5 class="info-title">服務團隊
+      </h5>
+      <hr />
+      <p>
+        本公司提供二手船買賣仲介、船舶租賃仲介、新造船仲介、船舶融資諮詢等相關商業企劃專案之諮詢，歡迎來電洽詢！</p>
+      <a href="#" class="btn btn-warning info-btn" style="color: white;">more</a>
+    </div>
+  </div>
+</div>
