--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,26 +5,28 @@
   <title>{{title}}</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' href='https://bootswatch.com/4/spacelab/bootstrap.min.css'>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">
-      <img src="/images/ssas-removebg-preview.png">
-    </a>
     <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="/images/ssas-removebg-preview.png">
+      </a>
       <div class="nav-box">
         <div class="row row-up">
           <div id="navbarColor03">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="#">English</a>
               </li>
               <li class="nav-item mt-2">
                 |
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">繁中</a>
+                <a class="nav-link active" href="#">繁中</a>
               </li>
               <li class="nav-item mt-2">
                 |
@@ -38,7 +40,7 @@
         <div class="row">
           <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="#">公司簡介</a>
               </li>
               <li class="nav-item mt-2">
@@ -63,6 +65,44 @@
 
   </nav>
   {{{body}}}
+
+  <footer class="container footer mt-5">
+    <div class="row">
+      <div class="col-3">
+        <h6>Address</h6>
+        <div class="footer-data">
+          <p>10TH FL., NO. 101, JENAI RD. SEC. 4 TAIPEI, TAIWAN, R. O. C.</p>
+        </div>
+      </div>
+      <div class="col-3">
+        <h6>Phone</h6>
+        <div class="footer-data">
+          <p>TEL：886-2-2781-9796<br>FAX：886-2-2776-3353
+          </p>
+
+        </div>
+      </div>
+      <div class="col-3">
+        <h6>E-mail</h6>
+        <div class="footer-data">
+          <p>ark@arkshipping.com.tw
+          </p>
+        </div>
+      </div>
+      <div class="copyright">
+        Copyright © 2020 ARK Inc. All rights reserved
+      </div>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
