--- a/views/introduction.hbs
+++ b/views/introduction.hbs
@@ -1,12 +1,57 @@
-<div class="container">
-  <div class="row intro-img">img</div>
-  <div class="row intro-content">
-    <div class="col-3">
-      <div class="intro-list-img">img</div>
-      <div class="intro-list">
+<div class="container intro">
+  <div class="row intro-img">
+    <img style="width: 100%;" src="/images/intro-head-img.png" />
+  </div>
+  <div class="intro-box">
+    <div class="intro-nav">
+      <div class="intro-list-img">
+        <img style="width: 90%;" src="/images/aa-removebg-preview.png" />
+      </div>
+      <a href="#" style="text-decoration: none;" class="active mt-1 mb-1">公司歷史沿革</a>
+      <a href="#" style="text-decoration: none">公司經營概況</a>
+    </div>
+
+    {{!-- <div class="intro-bg ml-3 mt-3">
+      <h4>公司歷史沿革</h4>
+      <div class="intro-content mt-3">
+        <h6>
+          ARK Shipping的歷史可追溯至1979年由C.C. Cheng程鎮鑒先生所創立的Rich Hope Marine；程先生亦曾與張榮發先生及陳查某先生合夥投資船舶成立Chan Frong海運。Rich
+          Hope海運在1975-1985年間擁有4艘7,000~15,000 dwt的散裝船隊負責從事台灣-印尼-馬來西亞-泰國間的貨物運輸。 C.C.
+          Cheng程先生在1970年之前任職於住友商社台灣副社長，專職代理來島造船廠接洽造船業務。Mr. Lanner Cheng程先生在當時則任職Rich Hope海運之經理，直至1993年將Rich
+          Hope海運正式重組為ARK
+          Shipping and Agency Corp.並轉型為以船舶之經紀仲介為首要項目的船舶經紀暨船務代理公司。ARK
+          Shipping無論是過去、現在或未來都以提供最優質的服務並忠實達成客戶的託付為目標。能為客戶提供協助永遠是我們莫大的榮幸，您的繼續支持會是我們最大的鼓勵。<br /><br />
+          1993 ~ 1999亞德興業股份有限公司憑藉與多位德國夥伴包括擁有10艘2000 - 3400 TEU的Friedrich A. Detjen及有50艘船船隊的Reederei Nord K. E.
+          Oldendorff有深厚的合作關係
+          。由此淵源，ARK Shipping累積無數貨櫃船租賃與買賣之成交經驗。在1994年3月與6月，兩艘1932 TEU甫出廠的新船透過ARK Shipping 長租給Hyundai Merchant Marine及Yang
+          Ming
+          Line，並在船廠直接完成交船。韓國的Heung-A Shipping也是ARK Shipping的主要客戶之一。另，ARK Shipping亦積極建立了與當時正快速擴張其事業版圖的韓國Halla
+          Shipyard(現稱Hyundai
+          SAMHO)相當密切的互動關係。
+        </h6>
+
+      </div>
+    </div> --}}
+
+    <div class="intro-bf ml-3 mt-3">
+      <h4>公司經營概況</h4>
+      <div class="intro-content mt-3">
+        <h5>
+          ARK Shipping專長領域: 貨櫃船/散裝船/油輪<br />
+        </h5>
+        <h6>二手船買賣仲介</h6>
+
+        <h6>船舶租賃仲介</h6>
+        <h6>新造船仲介</h6>
+        <h6>船舶融資諮詢</h6>
+        <h6>相關商業企劃專案之諮詢</h6>
+        <p>
+          貨櫃船之租賃及買賣業務為本公司之擅長領域，二十多年的經驗累積成就了ARK Shipping的深厚客戶基礎，其中包括有船東、亞洲區各主要定期班輪的航商以及造船廠等。<br /><br />
+
+          ARK Shipping 也同時與多家銀行、金融租賃業者及造船廠如台灣國際造船、韓國三星重工與SPP造船廠等有密切的聯繫互動及合作關係，進而提供與新造船相關業務及其企畫案之相關融資諮詢服務
+        </p>
 
       </div>
     </div>
-    <div class="col-9"></div>
   </div>
 </div>
