--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 15px;
+  font-family: Arial, "微軟正黑體", "Microsoft JhengHei","Helvetica Neue,Helvetica", sans-serif; 
 }
 
 a {
@@ -148,8 +149,52 @@ hr {
   margin-bottom: 0px;
 }
 
+.marketListBox{
+  margin: 0 auto;
+  line-height: 30px;
+  color: #595757;
+  width: 720px;
+  word-break: break-all;
+  border-top: 3px solid #ff9b00 ;
+  background-color: rgb(238, 246, 248);
+}
 
+.marketList {
+  display: inline-block;
+  padding: 30px;
+}
 
+ol, ul {
+  list-style: none;
+}
+
+.marketListItem {
+  float: left;
+  width: 560px;
+  margin-right: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: inline-block;
+}
+
+.marketTime {
+  float: right;
+  display: inline-block;
+}
+
+.marketList li a {
+    text-decoration: none;
+    color: #595757;
+    display: inline-block;
+    line-height: 40px;
+}
+
+.marketList li {
+    border-bottom: 1px solid #c9caca;
+    display: inline-block;
+    height: 40px;
+}
 
 
 
