--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -66,33 +66,36 @@
   </nav>
   {{{body}}}
 
-  <footer class="container footer mt-5">
-    <div class="row">
-      <div class="col-3">
-        <h6>Address</h6>
-        <div class="footer-data">
-          <p>10TH FL., NO. 101, JENAI RD. SEC. 4 TAIPEI, TAIWAN, R. O. C.</p>
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-3 mt-4">
+          <h6>Address</h6>
+          <div class="footer-data">
+            <p>10TH FL., NO. 101, JENAI RD. SEC. 4 TAIPEI, TAIWAN, R. O. C.</p>
+          </div>
         </div>
-      </div>
-      <div class="col-3">
-        <h6>Phone</h6>
-        <div class="footer-data">
-          <p>TEL：886-2-2781-9796<br>FAX：886-2-2776-3353
-          </p>
+        <div class="col-3 mt-4">
+          <h6>Phone</h6>
+          <div class="footer-data">
+            <p>TEL：886-2-2781-9796<br>FAX：886-2-2776-3353
+            </p>
 
+          </div>
         </div>
-      </div>
-      <div class="col-3">
-        <h6>E-mail</h6>
-        <div class="footer-data">
-          <p>ark@arkshipping.com.tw
-          </p>
+        <div class="col-3 mt-4">
+          <h6>E-mail</h6>
+          <div class="footer-data">
+            <p>ark@arkshipping.com.tw
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="copyright">
-        Copyright © 2020 ARK Inc. All rights reserved
+        <div class="copyright">
+          Copyright © 2020 ARK Inc. All rights reserved
+        </div>
       </div>
     </div>
+
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
