--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<div class="info container mt-5">
+<div class="info container mt-5 mb-3">
   <div class="row">
     <div class="col-3 info-data">
       <img class="d-block w-100 info-img" src="http://www.arkshipping.com.tw/image/inforBanner01.jpg" alt="">
