--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="/images/ssas-removebg-preview.png">
       </a>
       <div class="nav-box">
@@ -32,7 +32,7 @@
                 |
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">回首頁</a>
+                <a class="nav-link" href="/">回首頁</a>
               </li>
             </ul>
           </div>
@@ -41,21 +41,21 @@
           <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">公司簡介</a>
+                <a class="nav-link" href="/introduction">公司簡介</a>
               </li>
               <li class="nav-item mt-2">
                 |
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">服務項目</a>
+                <a class="nav-link" href="/services">服務項目</a>
               </li>
               <li class="nav-item mt-2">|</li>
               <li class="nav-item">
-                <a class="nav-link" href="#">市場分析</a>
+                <a class="nav-link" href="/market">市場分析</a>
               </li>
               <li class="nav-item mt-2">|</li>
               <li class="nav-item">
-                <a class="nav-link" href="#">服務團隊</a>
+                <a class="nav-link" href="/team">服務團隊</a>
               </li>
             </ul>
           </div>
