--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,9 @@
           <div id="navbarColor03">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
+                <a class="nav-link" href="/admin">管理 |</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">English</a>
               </li>
               <li class="nav-item mt-2">
