--- a/views/vessel.hbs
+++ b/views/vessel.hbs
@@ -1,2 +1,15 @@
 <div id="name"></div>
 <div id="imo">{{imo}}</div>
+
+
+<script type="text/javascript">
+  // Map appearance
+  var width = "50%";         // width in pixels or percentage
+  var height = "300";         // height in pixels
+  var names = true;           // always show ship names (defaults to false)
+
+  // Single ship tracking
+  var imo = "9506291";        // display latest position (by IMO, overrides MMSI)
+  var show_track = true;      // display track line (last 24 hours)
+</script>
+<script type="text/javascript" src="https://www.vesselfinder.com/aismap.js"></script>
