--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,7 +20,7 @@
           <div id="navbarColor03">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/admin">管理 |</a>
+                <a class="nav-link" href="/admin/postVessel">新增船舶 |</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">English</a>
