--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,9 @@
           <div id="navbarColor03">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
+                <a class="nav-link" href="/positionlist">Position List|</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/admin/postVessel">新增船舶 |</a>
               </li>
               <li class="nav-item">
