--- a/views/vessel.hbs
+++ b/views/vessel.hbs
@@ -1,15 +1,55 @@
-<div id="name"></div>
-<div id="imo">{{imo}}</div>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+      <h5>Vessel: YM Busan</h5>
+    </div>
+    <div class="col-3">
+      <h5>Type: Samsung 4400</h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-3">
+      <h5>History Charterer</h5>
+    </div>
+    <div class="col-6">
+      <div id="charterPeriod"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-3">
+      <h5>Latest Fixture: </h5>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-3">
+      <h5>Current Position:</h5>
+    </div>
+
+    <div class="col-9">
+      <script type="text/javascript">
+        // Map appearance
+        var width = "83%";         // width in pixels or percentage
+        var height = "300";        // height in pixels
+        var names = true;           // always show ship names (defaults to false)
+
+        // Single ship tracking
+        var imo = {{ imo }};        // display latest position (by IMO, overrides MMSI)
+        var show_track = true;      // display track line (last 24 hours)
+      </script>
+      <script type="text/javascript" src="https://www.vesselfinder.com/aismap.js"></script>
+    </div>
+  </div>
+</div>
 
 
-<script type="text/javascript">
-  // Map appearance
-  var width = "50%";         // width in pixels or percentage
-  var height = "300";         // height in pixels
-  var names = true;           // always show ship names (defaults to false)
 
-  // Single ship tracking
-  var imo = {{ imo }};        // display latest position (by IMO, overrides MMSI)
-  var show_track = true;      // display track line (last 24 hours)
+<script>
+
+  new Timesheet('charterPeriod', 2020, 2030, [
+    ['07/2020', '09/2021', 'YML', 'lorem'],
+    ['09/2021', '12/2021', 'EMC', 'default']
+  ]);
+
 </script>
-<script type="text/javascript" src="https://www.vesselfinder.com/aismap.js"></script>
