Update vessel page css and add edit postion/fixture btn

--- a/views/vessel.hbs
+++ b/views/vessel.hbs
@@ -1,4 +1,9 @@
-<div class="container">
+<div class="vessel-nav-box">
+  <a class="btn btn-primary mt-3" href="#">編輯position</a>
+  <a class="btn btn-primary mt-3" href="#">編輯Fixture</a>
+</div>
+
+<div class="vessel-box container mt-3">
   <div class="row">
     <div class="col-3">
       <h5>Vessel: YM Busan</h5>
@@ -20,6 +25,10 @@
     <div class="col-3">
       <h5>Latest Fixture: </h5>
     </div>
+    <div class="col-9">
+      <h5>YML ext 3-6mos USD: 6500</h5>
+    </div>
+
   </div>
 
   <div class="row">
