Update positionList page

--- a/views/positionList.hbs
+++ b/views/positionList.hbs
@@ -63,8 +63,8 @@
     </tbody>
   </table>
 
-  {{#if totoPage}}
-  <div class="container ">
+  {{#if totalPage}}
+  <div class="container">
     <ul class="pagination">
       <li class="page-item">
         <a class="page-link" href="/positionList?page={{prev}}" aria-label="Previous">&laquo;</a>
