Add edit position list feature

--- a/views/positionList.hbs
+++ b/views/positionList.hbs
@@ -42,7 +42,7 @@
       {{#each vessels}}
       <tr class="table-info">
         <th scope="row">
-          <a href="/vessels/{{{this.IMONumber}}}">{{{this.name}}}</a>
+          <a href="/vessels/{{{this.id}}}">{{{this.name}}}</a>
         </th>
         <td>{{{this.blt}}}</td>
         <td>{{{this.type}}}</td>
