--- a/views/vessel.hbs
+++ b/views/vessel.hbs
@@ -1,8 +1,7 @@
 <div class="vesselData">
   <div class="vessel-nav-box">
-    <a class="btn btn-primary mt-3" href="/admin/post/charterer">新增 Charterer</a>
     <a class="btn btn-primary mt-3" href="/admin/edit/positionlist/{{{vessel.id}}}">編輯 Position</a>
-    <a class="btn btn-primary mt-3" href="/admin/post/fixtures/{{{vessel.IMONumber}}}">新增 Fixture</a>
+    <a class="btn btn-primary mt-3" href="/admin/post/fixtures/{{{vessel.id}}}">新增 Fixture</a>
     <a class="btn btn-primary mt-3" href="/admin/edit/fixtures/{{{vessel.IMONumber}}}">編輯 Fixture</a>
   </div>
   <div class="vessel-box container mt-3">
