--- a/views/vessel.hbs
+++ b/views/vessel.hbs
@@ -1,3 +1,15 @@
+<script type="text/javascript">
+  var timeSheetData = []
+</script>
+
+{{#each data}}
+<script type="text/javascript">
+  timeSheetData.push([`{{this.begDate}}`, `{{this.endDate}}`, `{{this.charterer}}`, `{{this.color}}`])
+  console.log(timeSheetData)
+</script>
+{{/each}}
+
+
 <div class="vesselData">
   <div class="vessel-nav-box">
     <a class="btn btn-primary mt-3" href="/admin/edit/positionlist/{{{vessel.id}}}">編輯 Position</a>
@@ -55,14 +67,6 @@
 </div>
 
 
-
-
-
 <script>
-
-  new Timesheet('charterPeriod', 2020, 2030, [
-    ['07/2020', '09/2021', 'YML', 'lorem'],
-    ['09/2021', '12/2021', 'EMC', 'default']
-  ]);
-
+  new Timesheet('charterPeriod', 2020, 2030, timeSheetData);
 </script>
