--- a/views/vessel.hbs
+++ b/views/vessel.hbs
@@ -13,7 +13,7 @@
   <div class="vessel-nav-box">
     <a class="btn btn-primary mt-3" href="/admin/edit/positionlist/{{{vessel.id}}}">編輯 Position</a>
     <a class="btn btn-primary mt-3" href="/admin/post/fixtures/{{{vessel.id}}}">新增 Fixture</a>
-    <a class="btn btn-primary mt-3" href="/admin/edit/fixtures/{{{vessel.id}}}">編輯 Fixture</a>
+    <a class="btn btn-primary mt-3" href="/admin/vessel/fixtures/{{{vessel.id}}}">瀏覽 Fixtures</a>
   </div>
   <div class="vessel-box container mt-3">
     <div class="row">
