--- a/views/editFixture.hbs
+++ b/views/editFixture.hbs
@@ -7,7 +7,7 @@
         <p>*為必填欄位</p>
       </div>
       <div class="col-6">
-        <h3>MV {{fixture.name}} - 新增Fixture</h3>
+        <h3>MV {{fixture.vesselName}} - 新增Fixture</h3>
         <input type="text" name="vesselId" hidden value="{{fixture.vesselId}}" />
       </div>
     </div>
