--- a/views/postCharterer.hbs
+++ b/views/postCharterer.hbs
@@ -1,1 +1,25 @@
-{{charterer}}
+<div class="container form-group mt-5">
+  {{!-- {{> messages}} --}}
+  <form action="/admin/post/charterer" method="POST">
+    {{!-- title --}}
+    <div class="row mb-5 form-group">
+      <div class="col-3">
+        <h3>新增Charterer</h3>
+      </div>
+      <div class="col-6">
+        <input class="form-control" type="text" placeholder="請輸入租家名" name="charterer" value="">
+      </div>
+      <div class="col-3">
+        <button class="btn btn-secondary" type="submit">新增</button>
+      </div>
+    </div>
+  </form>
+
+  <div class="chartererBox">
+    {{#each charterers}}
+    <div class="chartererData">
+      {{this.name}}
+    </div>
+    {{/each }}
+  </div>
+</div>
